--- a/css/style.css
+++ b/css/style.css
@@ -836,13 +836,15 @@ a
 {
     margin-right: 26px;
 
-    background: url('../img/raspberries.jpg');
+    background: url('../img/raspberries.jpg') center;
+    background-size: cover;
     background-color: #640c1b;
 }
 
 .offers-item--chocolate
 {
-    background: url('../img/chocolate.jpg') no-repeat;
+    background: url('../img/chocolate.jpg') center;
+    background-size: cover;
     background-color: #40261b;
 }
 
@@ -1002,9 +1004,6 @@ a
 
 .icy-cream-item__description
 {
-    position: relative;
-    z-index: 1;
-
     width: 260px;
     min-height: 44px;
     margin: 0;
@@ -1015,9 +1014,16 @@ a
 
 .icy-cream-item__link
 {
+    position: relative;
+    z-index: 10;
     background-image: linear-gradient(transparent 18px, rgba(255, 255, 255, .2) 0px);
 }
-
+.icy-cream-item__link:hover,
+.icy-cream-item__link:active {
+    color: #ffbc9e;
+    background-image: linear-gradient(transparent 18px, #ffbc9e 0px);
+    cursor: default;
+}
 .about-ice-cream
 {
     box-sizing: border-box;
@@ -1148,7 +1154,8 @@ a
     padding: 23px 19px;
 
     color: #323232;
-    background: url('../img/blog-background.jpg') no-repeat;
+    background: url('../img/blog-background.jpg') center;
+    background-size: cover;
     background-color: #fff;
 }
 
@@ -1688,7 +1695,7 @@ a
     line-height: 41px;
 
     margin: 0;
-    margin-bottom: 25px;
+    margin-bottom: 27px;
     padding: 0;
 }
 
@@ -1706,7 +1713,7 @@ a
 
 .catalog-form-block
 {
-    margin-right: 15px;
+    margin-right: 16px;
     margin-bottom: 15px;
     margin-left: 0;
 }
@@ -1720,7 +1727,7 @@ a
     display: block;
 
     margin: 0;
-    margin-bottom: 8px;
+    margin-bottom: 7px;
     margin-left: 15px;
     padding: 0;
 }
@@ -1732,6 +1739,7 @@ a
 {
     font-size: 16px;
     line-height: 18px;
+    font-weight: 500;
 
     color: #fff;
     border-radius: 25px;
@@ -1751,7 +1759,7 @@ a
 {
     position: absolute;
     top: 13px;
-    right: 16px;
+    right: 15px;
 
     content: '';
     pointer-events: none;
@@ -1764,7 +1772,7 @@ a
 .select-sort
 {
     width: 100%;
-    padding: 8px 15px;
+    padding: 9px 15px;
 
     border: none;
 
@@ -1791,7 +1799,7 @@ select::-ms-expand {
     position: relative;
 
     width: 176px;
-    padding: 15px 21px;
+    padding: 16px 21px;
 }
 
 .price-scale
@@ -1815,7 +1823,7 @@ select::-ms-expand {
 .range-price
 {
     position: absolute;
-    top: 7px;
+    top: 8px;
 
     width: 4px;
     height: 4px;
@@ -1829,12 +1837,12 @@ select::-ms-expand {
 
 .range-price-min
 {
-    left: 35px;
+    left: 34px;
 }
 
 .range-price-max
 {
-    left: 133px;
+    left: 132px;
 }
 
 .catalog-form-item--radio
@@ -1844,7 +1852,7 @@ select::-ms-expand {
     display: flex;
 
     box-sizing: border-box;
-    padding: 9px 9px;
+    padding: 9px 1px 9px 6px;
 }
 
 .catalog-input-filler,
@@ -1859,14 +1867,14 @@ select::-ms-expand {
 {
     position: relative;
 
-    margin-right: 14px;
+    margin-right: 16px;
     padding-left: 35px;
 }
 
 .label-fat::before
 {
     position: absolute;
-    top: -1px;
+    top: -2px;
     left: 6px;
 
     width: 14px;
@@ -1876,6 +1884,9 @@ select::-ms-expand {
 
     border: 4px solid rgba(255, 255, 255, .8);
     border-radius: 50%;
+}
+.label-fat--thirty {
+    margin-right: 13px;
 }
 
 .label-fat:hover::before,
@@ -1887,7 +1898,7 @@ select::-ms-expand {
 .radio-btn:checked + .label-fat::after
 {
     position: absolute;
-    top: 6px;
+    top: 5px;
     left: 13px;
 
     width: 8px;
@@ -1925,15 +1936,15 @@ select::-ms-expand {
 {
     position: relative;
 
-    margin-right: 19px;
-    padding-left: 35px;
+    margin-right: 16px;
+    padding-left: 37px;
 }
 
 .label-filler::before
 {
     position: absolute;
     top: -1px;
-    left: 3px;
+    left: 5px;
 
     width: 25px;
     height: 23px;
@@ -1942,13 +1953,14 @@ select::-ms-expand {
 
     opacity: .8;
     background: url(../img/checkbox-off.svg) no-repeat;
+    background-size: 20px;
 }
 
 .checkbox-btn:checked + .label-filler::after
 {
     position: absolute;
     top: -1px;
-    left: 3px;
+    left: 4px;
 
     width: 25px;
     height: 23px;
@@ -1957,6 +1969,7 @@ select::-ms-expand {
 
     opacity: .8;
     background: url(../img/checkbox-on.svg) no-repeat;
+    background-size: 24px;
 }
 
 .label-filler:hover::before,
@@ -1967,9 +1980,9 @@ select::-ms-expand {
 
 .form-btn
 {
-    margin: 0 0 15px 0;
+    margin: 0 0 15px -1px;
     margin-bottom: 15px;
-    padding: 7px 27px;
+    padding: 7px 28px 7px 27px;
 
     border: 2px solid #fff;
 }
