--- a/css/style.css
+++ b/css/style.css
@@ -414,8 +414,7 @@ a
 .purchase-wrap,
 .nav-form--login,
 .nav-form--search,
-.feedback,
-.feedback-overlay
+.feedback
 {
     display: none;
 }
@@ -1371,6 +1370,7 @@ a
 
     background: url('../img/map.jpg') no-repeat;
     background-position: top center;
+    background-size: cover;
     background-size: 1200px 430px;
 }
 
@@ -2404,15 +2404,20 @@ select::-ms-expand
     top: 0;
     left: 0;
 
+    display: none;
+
     width: 100%;
     height: 100%;
 
     background-color: rgba(0, 0, 0, .3);
 }
+
+
 .overlay-show
 {
     display: block;
 }
+
 .feedback-close
 {
     font-size: 0;
